app/src/test/resources/programs/valid/foreign/multiple_functions.exe
foreign fun id(x: Int) -> Int
foreign fun get_one() -> Int
foreign fun add(x: Int, y: Int) -> Int
foreign fun print(x: Int) -> Nope

fun main() -> Int{
    print(add(get_one(), id(3)))
    id(0)
}