app/src/test/resources/programs/invalid/foreign/bad_types.exe
foreign foo id(x: Int) -> Bool
foreign foo add(x: Bool, y: Int) -> Int

foo main() -> Int = {
    let x: Int = id(false)
    add(3, true)
    add(y=true, x=3)
    id(0)
}